feat: Implement CKEditor 4 with MathLive and TeXZilla integration for advanced math editing capabilities.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CKEditor-4 with MathLive IO</title>
   <meta name="twitter:card" content="summary_large_image" />
+  <script src="https://cdn.jsdelivr.net/npm/texzilla@1.0.2/TeXZilla.min.js" async></script>
+
 </head>
 
 <body>
